# 3-DOF-Robotic-Arm

./: README.md
src/robotic_arm/: package.xml  setup.cfg  setup.py
src/robotic_arm/config/: arm.rviz  controllers.yaml
src/robotic_arm/launch/: arm_system.launch.py
src/robotic_arm/robotic_arm/: controller_node.py  ee_marker_node.py  fk_utils.py  gui_node.py  ik_node.py  ik_utils.py  obstacle_node.py  planner_node.py  ultrasonic_node.py  waypoint_node.py
src/robotic_arm/urdf/: arm.urdf
