<?xml version="1.0"?>
<package format="3">
  <name>robotic_arm</name>
  <version>0.0.1</version>
  <description>3-DOF robotic arm with IK, sensing, waypoint replanning, and joint-state control</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>python3-tk</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>